--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,7 @@ li:last-child {
    justify-content: space-between;
 
    align-items: center;
+
 }
 
 .left {
@@ -134,7 +135,7 @@ span {
 
 
 .grid-item1 {
-   background: linear-gradient(330deg, rgb(255, 255, 255, 0.1), transparent 50%);
+   background: linear-gradient(330deg, rgba(255, 255, 255, 0.1), transparent 50%);
    padding: 40px;
    cursor: pointer;
 
@@ -142,46 +143,46 @@ span {
 
 
 .grid-item2 {
-   background: linear-gradient(36deg, rgb(255, 255, 255, 0.1), transparent 50%);
+   background: linear-gradient(36deg, rgba(255, 255, 255, 0.1), transparent 50%);
    padding: 40px;
    cursor: pointer;
 }
 
 .grid-item3 {
-   background: linear-gradient(200deg, rgb(255, 255, 255, 0.1), transparent 50%);
+   background: linear-gradient(200deg, rgba(255, 255, 255, 0.1), transparent 50%);
    padding: 40px;
    cursor: pointer;
 }
 
 .grid-item4 {
-   background: linear-gradient(135deg, rgb(255, 255, 255, 0.1), transparent 50%);
+   background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), transparent 50%);
    padding: 40px;
    cursor: pointer;
 }
 
 .grid-item1:hover {
-   background: linear-gradient(330deg, rgb(255, 255, 255, 0.3), transparent 50%);
+   background: linear-gradient(330deg, rgba(255, 255, 255, 0.3), transparent 50%);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    border-right: 1px solid rgba(255, 255, 255, 0.3);
    transition: 0.2s ease-in-out;
 }
 
 .grid-item2:hover {
-   background: linear-gradient(36deg, rgb(255, 255, 255, 0.3), transparent 50%);
+   background: linear-gradient(36deg, rgba(255, 255, 255, 0.3), transparent 50%);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    border-left: 1px solid rgba(255, 255, 255, 0.3);
    transition: 0.2s ease-in-out;
 }
 
 .grid-item3:hover {
-   background: linear-gradient(200deg, rgb(255, 255, 255, 0.3), transparent 50%);
+   background: linear-gradient(200deg, rgba(255, 255, 255, 0.3), transparent 50%);
    border-top: 1px solid rgba(255, 255, 255, 0.3);
    border-right: 1px solid rgba(255, 255, 255, 0.3);
    transition: 0.2s ease-in-out;
 }
 
 .grid-item4:hover {
-   background: linear-gradient(135deg, rgb(255, 255, 255, 0.3), transparent 50%);
+   background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), transparent 50%);
    border-top: 1px solid rgba(255, 255, 255, 0.3);
    border-left: 1px solid rgba(255, 255, 255, 0.3);
    transition: 0.2s ease-in-out;
