--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@ body {
 
 
       .header__logo-image {
-         background-image: url('../public/img/logo.png');
+         background-image: url('https://github.com/diniso4ka/spaceXreact/blob/main/public/img/logo.png?raw=true');
          background-repeat: no-repeat;
          background-position: center;
          padding: 0 25px 0 0;
