--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ body {
          margin: 38px 0 0 0;
 
          li {
+            white-space: nowrap;
             color: #fff;
             margin: 0 30px 0 0;
             padding-bottom: 15px;
