--- a/src/App.scss
+++ b/src/App.scss
@@ -85,19 +85,27 @@ body {
          display: inline-block;
          margin: 0 0 100px 0;
 
+         @media (max-width:900px) {
+            margin: 0 30px 0 0;
+         }
+
          span {
             font-weight: 100;
-            font-size: 70px;
+            font-size: 130px;
             font-weight: 700;
+
+            @media (max-width:1500px) {
+               font-size: 70px;
+            }
          }
       }
 
       .button-start {
-         padding: 10px 25px;
+         padding: 18px 45px;
          display: inline-block;
          color: #fff;
          background-color: transparent;
-         font-size: 14px;
+         font-size: 25px;
          font-weight: 100;
          border: solid transparent;
          border-style: solid;
@@ -106,6 +114,11 @@ body {
          border-image-slice: 1;
          position: relative;
          cursor: pointer;
+
+         @media (max-width:1500px) {
+            font-size: 14px;
+            padding: 10px 25px;
+         }
 
 
 
