--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,14 @@ body {
          display: flex;
          margin: 38px 0 0 0;
 
+         .header__nav-item {
+            margin: 0 30px 0 0;
+
+            &:last-child {
+               margin: 0;
+            }
+         }
+
          li {
             white-space: nowrap;
             color: #fff;
@@ -40,6 +48,8 @@ body {
             font-size: 24px;
             cursor: pointer;
 
+
+
             &:hover {
                box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
                opacity: 0.8;
@@ -47,9 +57,7 @@ body {
                transition: 0.5 ease-in-out;
             }
 
-            &:last-child {
-               margin: 0;
-            }
+
          }
       }
    }
@@ -114,6 +122,8 @@ body {
          border-image-slice: 1;
          position: relative;
          cursor: pointer;
+
+
 
          @media (max-width:1500px) {
             font-size: 14px;
@@ -267,6 +277,23 @@ body {
       }
    }
 
+
+}
+
+.technologies-wrapper {
+   max-width: 600px;
+   margin: 100px auto;
+}
+
+.technologies-title {
+   font-size: 50px;
+   border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+   margin-bottom: 50px;
+}
+
+.technologies-items {
+   font-size: 30px;
+   margin: 0 0 30px 0;
 
 }
 
