--- a/src/App.scss
+++ b/src/App.scss
@@ -299,6 +299,7 @@ body {
 .component__wrapper {
    max-width: 600px;
    margin: 100px auto;
+   padding: 0 20px;
 
    p {
       font-size: 20px;
