--- a/src/App.scss
+++ b/src/App.scss
@@ -109,7 +109,7 @@ body {
          margin: 0 0 100px 0;
 
          @media (max-width:900px) {
-            margin: 0 30px 0 0;
+            margin: 0 30px 30px 0;
          }
 
          span {
