--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ body {
          background-repeat: no-repeat;
          background-position: center;
          padding: 0 25px 0 0;
+         cursor: pointer;
       }
 
       ul {
