--- a/src/App.scss
+++ b/src/App.scss
@@ -48,20 +48,22 @@ body {
             padding-bottom: 15px;
             font-size: 24px;
             cursor: pointer;
+            transition: 0.3s all ease-in-out;
 
             &.active {
                transform: translateY(-2px);
                color: #ff3f04;
-               transition: 0.3s ease-in-out;
+
 
             }
 
 
             &:hover {
-               box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+               box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
                opacity: 0.8;
-               transform: translateY(-2px);
-               transition: 0.5 ease-in-out;
+               transform: translateY(-2px) scale(1.02);
+               transition: 0.5 ease-in-out,
+
             }
 
 
@@ -138,12 +140,16 @@ body {
          border-image-slice: 1;
          position: relative;
          cursor: pointer;
+         transition: 0.3s all ease-in-out;
+
+
 
 
 
          @media (max-width:1500px) {
             font-size: 14px;
             padding: 10px 25px;
+
          }
 
 
@@ -152,7 +158,8 @@ body {
             color: #ff5e00;
             border-image-source: linear-gradient(150deg, #263e66, #09213d, #111f2d, #23599c);
             opacity: 0.8;
-            transition: 0.3s ease-in-out, transform 0.2s ease-in-out;
+            transform: scale(1.02);
+
 
          }
 
@@ -216,12 +223,14 @@ body {
       border-right: 1px solid rgba(transparent, 0);
       padding: 40px;
       cursor: pointer;
+      transition: 3s all ease-in-out;
 
       &:hover {
          background: linear-gradient(330deg, rgba(255, 255, 255, 0.3), transparent 50%);
          border-bottom: 1px solid (rgba(255, 255, 255, 0.3));
          border-right: 1px solid rgba(255, 255, 255, 0.3);
-         transition: 0.2s ease-in-out;
+         transform: scale(1.05);
+
       }
 
       @media (max-width: 612px) {
@@ -240,12 +249,14 @@ body {
       border-left: 1px solid rgba(transparent, 0);
       padding: 30px;
       cursor: pointer;
+      transition: 3s all ease-in-out;
 
       &.grid-item2:hover {
          background: linear-gradient(36deg, rgba(255, 255, 255, 0.3), transparent 50%);
          border-bottom: 1px solid rgba(255, 255, 255, 0.3);
          border-left: 1px solid rgba(255, 255, 255, 0.3);
-         transition: 0.2s ease-in-out;
+         transform: scale(1.05);
+
       }
 
       @media (max-width: 612px) {
@@ -263,12 +274,14 @@ body {
       border-right: 1px solid rgba(transparent, 0);
       padding: 30px;
       cursor: pointer;
+      transition: 3s all ease-in-out;
 
       &.grid-item3:hover {
          background: linear-gradient(200deg, rgba(255, 255, 255, 0.3), transparent 50%);
          border-top: 1px solid rgba(255, 255, 255, 0.3);
          border-right: 1px solid rgba(255, 255, 255, 0.3);
-         transition: 0.2s ease-in-out;
+         transform: scale(1.05);
+
       }
 
       @media (max-width: 612px) {
@@ -286,12 +299,14 @@ body {
       border-left: 1px solid rgba(transparent, 0);
       padding: 30px;
       cursor: pointer;
+      transition: 3s all ease-in-out;
 
       &.grid-item4:hover {
          background: linear-gradient(135deg, rgba(255, 255, 255, 0.3), transparent 50%);
          border-top: 1px solid rgba(255, 255, 255, 0.3);
          border-left: 1px solid rgba(255, 255, 255, 0.3);
-         transition: 0.2s ease-in-out;
+         transform: scale(1.05);
+
       }
 
       @media (max-width: 612px) {
