--- a/src/App.scss
+++ b/src/App.scss
@@ -49,17 +49,19 @@ body {
             font-size: 24px;
             cursor: pointer;
             transition: 0.3s all ease-in-out;
+            border-bottom: 1px solid rgba(255, 255, 255, 0);
 
             &.active {
                transform: translateY(-2px);
                color: #ff3f04;
 
 
+
             }
 
 
             &:hover {
-               box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+               border-bottom: 1px solid rgba(255, 255, 255, 0.2);
                opacity: 0.8;
                transform: translateY(-2px) scale(1.02);
                transition: 0.5 ease-in-out,
